fix: public folder and error
- Removed public folder from default file path.
- Fiex typos on error code pages

--- a/errors/400.html
+++ b/errors/400.html
@@ -13,7 +13,7 @@
   <div>
     <h1>400</h1>
     <h2>Bad Request</h2>
-    <p>The requested resource could not be found</p>
+    <p>The server cannot process the request due to a client error.</p>
   </div>
 </body>
 </html>
