--- a/errors/404.html
+++ b/errors/404.html
@@ -13,7 +13,7 @@
   <div>
     <h1>404</h1>
     <h2>Not Found</h2>
-    <p>The requested resource could not be found</p>
+    <p>The requested resource could not be found.</p>
   </div>
 </body>
 </html>
