--- a/errors/405.html
+++ b/errors/405.html
@@ -13,7 +13,7 @@
   <div>
     <h1>405</h1>
     <h2>Method Not Allowed</h2>
-    <p>The request method is not supported for the requested resource!</p>
+    <p>The request method is not supported for the requested resource.</p>
   </div>
 </body>
 </html>
