feat: http error codes
- Added more HTTP error code pages

--- a/errors/404.html
+++ b/errors/404.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="/errors/main.css" />
 
-  <title>404</title>
+  <title>404 - Not Found</title>
 </head>
 <body>
   <div>
