--- a/errors/405.html
+++ b/errors/405.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="/errors/main.css" />
 
-  <title>405</title>
+  <title>405 - Method Not Allowed</title>
 </head>
 <body>
   <div>
