--- a/errors/500.html
+++ b/errors/500.html
@@ -7,13 +7,13 @@
 
   <link rel="stylesheet" href="/errors/main.css" />
 
-  <title>400 - Bad Request</title>
+  <title>500 - Internal Server Error</title>
 </head>
 <body>
   <div>
-    <h1>400</h1>
-    <h2>Bad Request</h2>
-    <p>The server cannot process the request due to a client error.</p>
+    <h1>500</h1>
+    <h2>Internal Server Error</h2>
+    <p>The server encountered an internal error or misconfiguration and was unable to complete your request.</p>
   </div>
 </body>
 </html>
