--- a/errors/503.html
+++ b/errors/503.html
@@ -7,13 +7,13 @@
 
   <link rel="stylesheet" href="/errors/main.css" />
 
-  <title>400 - Bad Request</title>
+  <title>503 - Service Unavailable</title>
 </head>
 <body>
   <div>
-    <h1>400</h1>
-    <h2>Bad Request</h2>
-    <p>The server cannot process the request due to a client error.</p>
+    <h1>503</h1>
+    <h2>Service Unavailable</h2>
+    <p>The server is temporarily unable to handle your request.</p>
   </div>
 </body>
 </html>
