--- a/errors/405.html
+++ b/errors/405.html
@@ -5,7 +5,39 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/errors/main.css" />
+  <style>
+      * {
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      }
+
+      body {
+          width: 100%;
+          height: 90vh;
+          display: grid;
+          place-items: center;
+          color: rgba(0, 0, 0, 0.8);
+      }
+
+      div {
+          text-align: center;
+      }
+
+      h1 {
+          font-size: 7rem;
+          font-weight: 700;
+      }
+      h2 {
+          font-size: 1.4rem;
+          font-weight: 600;
+          margin-bottom: 2rem;
+      }
+      p {
+          color: #979797;
+      }
+  </style>
 
   <title>405 - Method Not Allowed</title>
 </head>
